...

class HomeScreen extends React.Component<Props, State> {
  render(): JSX.Element {
    const { navigation } = this.props;
    return (
      <ScrollView
        testID="scrollview"
        style={{ padding: 20 }}
        contentContainerStyle={{ alignItems: "flex-start", paddingBottom: 40 }}
      >
        <Text style={styles.heading}>Basic examples</Text>
        <Button
          testID="basic"
...
            navigation.navigate("AutoplayWithoutLoop");
          }}
          title="Autoplay without loop"
        />
        <Text style={styles.heading}>Methods</Text>
        <Button
          testID="methods"
          onPress={(): void => {
            navigation.navigate("Methods");
          }}
          title="Methods"
        />
        <Button
          testID="methods-with-loop"
          onPress={(): void => {
            navigation.navigate("MethodsWithLoop");
          }}
          title="Methods with loop enabled"
        />
      </ScrollView>
...
